cmake_minimum_required(VERSION 3.14)
project(cleetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(cleetcode main.cpp headers/twoSum.h headers/addTwoNumbers.h headers/lengthOfLongestSubstring.h headers/findMedianSortedArrays.h headers/longestPalindrome.h headers/convert.h headers/reverse.h headers/myAtoi.h headers/isPalindrome.h headers/isMatch.h headers/maxArea.h headers/intToRoman.h headers/romanToInt.h headers/longestCommonPrefix.h headers/threeSum.h headers/threeSumClosest.h headers/letterCombinations.h headers/fourSum.h headers/removeNthFromEnd.h headers/isValid.h headers/mergeTwoLists.h headers/generateParenthesis.h)